section-features finished, layout bug fixed, need to work after on responsive

--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -10,7 +10,6 @@ header {
 
 .hero-text-box {
   position: absolute;
-  width: 114rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
